--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "kreait/firebase-php": "^7.16",
         "laravel-notification-channels/fcm": "^4.5",
         "laravel/framework": "^11.31",
+        "laravel/octane": "^2.9",
         "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
